spec/nuklear-with-options.x86_64-apple-darwin9.lisp


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1884:13"
(CFFI:DEFCFUN ("nk_draw_list_fill_circle" NK-DRAW-LIST-FILL-CIRCLE)
    :VOID
  (ARG1 (:POINTER (:STRUCT NK-DRAW-LIST)))
  (CENTER (:STRUCT NK-VEC2))
  (RADIUS :FLOAT)
  (COL (:STRUCT NK-COLOR))
  (SEGS :UNSIGNED-INT))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1885:13"
(CFFI:DEFCFUN ("nk_draw_list_fill_poly_convex" NK-DRAW-LIST-FILL-POLY-CONVEX)
    :VOID
  (ARG1 (:POINTER (:STRUCT NK-DRAW-LIST)))
  (POINTS (:POINTER (:STRUCT NK-VEC2)))
  (COUNT :UNSIGNED-INT)
  (ARG4 (:STRUCT NK-COLOR))
  (ARG5 NK-ANTI-ALIASING))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1888:13"
(CFFI:DEFCFUN ("nk_draw_list_add_image" NK-DRAW-LIST-ADD-IMAGE)
    :VOID
  (ARG1 (:POINTER (:STRUCT NK-DRAW-LIST)))
  (TEXTURE (:STRUCT NK-IMAGE))
  (RECT (:STRUCT NK-RECT))
  (ARG4 (:STRUCT NK-COLOR)))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1889:13"
(CFFI:DEFCFUN ("nk_draw_list_add_text" NK-DRAW-LIST-ADD-TEXT)
    :VOID
  (ARG1 (:POINTER (:STRUCT NK-DRAW-LIST)))
  (ARG2 (:POINTER (:STRUCT NK-USER-FONT)))
  (ARG3 (:STRUCT NK-RECT))
  (TEXT :STRING)
  (LEN :INT)
  (FONT-HEIGHT :FLOAT)
  (ARG7 (:STRUCT NK-COLOR)))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1901:6"
(CFFI:DEFCENUM NK-STYLE-ITEM-TYPE
  (NK-STYLE-ITEM-COLOR 0)
  (NK-STYLE-ITEM-IMAGE 1))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1906:7"
(CFFI:DEFCUNION (NK-STYLE-ITEM-DATA :SIZE 24)
  (IMAGE (:STRUCT NK-IMAGE))
  (COLOR (:STRUCT NK-COLOR)))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1911:8"
(CFFI:DEFCSTRUCT (NK-STYLE-ITEM :SIZE 32)
  (TYPE NK-STYLE-ITEM-TYPE :OFFSET 0)
  (DATA (:UNION NK-STYLE-ITEM-DATA) :OFFSET 8))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1916:8"
(CFFI:DEFCSTRUCT (NK-STYLE-TEXT :SIZE 12)
  (COLOR (:STRUCT NK-COLOR) :OFFSET 0)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 4))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1921:8"
(CFFI:DEFCSTRUCT (NK-STYLE-BUTTON :SIZE 176)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (TEXT-BACKGROUND (:STRUCT NK-COLOR) :OFFSET 100)
  (TEXT-NORMAL (:STRUCT NK-COLOR) :OFFSET 104)
  (TEXT-HOVER (:STRUCT NK-COLOR) :OFFSET 108)
  (TEXT-ACTIVE (:STRUCT NK-COLOR) :OFFSET 112)
  (TEXT-ALIGNMENT NK-FLAGS :OFFSET 116)
  (BORDER :FLOAT :OFFSET 120)
  (ROUNDING :FLOAT :OFFSET 124)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 128)
  (IMAGE-PADDING (:STRUCT NK-VEC2) :OFFSET 136)
  (TOUCH-PADDING (:STRUCT NK-VEC2) :OFFSET 144)
  (USERDATA NK-HANDLE :OFFSET 152)
  (DRAW-BEGIN FUNCTION-POINTER :OFFSET 160)
  (DRAW-END FUNCTION-POINTER :OFFSET 168))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1948:8"
(CFFI:DEFCSTRUCT (NK-STYLE-TOGGLE :SIZE 240)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (CURSOR-NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 104)
  (CURSOR-HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 136)
  (TEXT-NORMAL (:STRUCT NK-COLOR) :OFFSET 168)
  (TEXT-HOVER (:STRUCT NK-COLOR) :OFFSET 172)
  (TEXT-ACTIVE (:STRUCT NK-COLOR) :OFFSET 176)
  (TEXT-BACKGROUND (:STRUCT NK-COLOR) :OFFSET 180)
  (TEXT-ALIGNMENT NK-FLAGS :OFFSET 184)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 188)
  (TOUCH-PADDING (:STRUCT NK-VEC2) :OFFSET 196)
  (SPACING :FLOAT :OFFSET 204)
  (BORDER :FLOAT :OFFSET 208)
  (USERDATA NK-HANDLE :OFFSET 216)
  (DRAW-BEGIN FUNCTION-POINTER :OFFSET 224)
  (DRAW-END FUNCTION-POINTER :OFFSET 232))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:1978:8"
(CFFI:DEFCSTRUCT (NK-STYLE-SELECTABLE :SIZE 280)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (PRESSED (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (NORMAL-ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 96)
  (HOVER-ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 128)
  (PRESSED-ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 160)
  (TEXT-NORMAL (:STRUCT NK-COLOR) :OFFSET 192)
  (TEXT-HOVER (:STRUCT NK-COLOR) :OFFSET 196)
  (TEXT-PRESSED (:STRUCT NK-COLOR) :OFFSET 200)
  (TEXT-NORMAL-ACTIVE (:STRUCT NK-COLOR) :OFFSET 204)
  (TEXT-HOVER-ACTIVE (:STRUCT NK-COLOR) :OFFSET 208)
  (TEXT-PRESSED-ACTIVE (:STRUCT NK-COLOR) :OFFSET 212)
  (TEXT-BACKGROUND (:STRUCT NK-COLOR) :OFFSET 216)
  (TEXT-ALIGNMENT NK-FLAGS :OFFSET 220)
  (ROUNDING :FLOAT :OFFSET 224)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 228)
  (TOUCH-PADDING (:STRUCT NK-VEC2) :OFFSET 236)
  (IMAGE-PADDING (:STRUCT NK-VEC2) :OFFSET 244)
  (USERDATA NK-HANDLE :OFFSET 256)
  (DRAW-BEGIN FUNCTION-POINTER :OFFSET 264)
  (DRAW-END FUNCTION-POINTER :OFFSET 272))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2013:8"
(CFFI:DEFCSTRUCT (NK-STYLE-SLIDER :SIZE 640)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (BAR-NORMAL (:STRUCT NK-COLOR) :OFFSET 100)
  (BAR-HOVER (:STRUCT NK-COLOR) :OFFSET 104)
  (BAR-ACTIVE (:STRUCT NK-COLOR) :OFFSET 108)
  (BAR-FILLED (:STRUCT NK-COLOR) :OFFSET 112)
  (CURSOR-NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 120)
  (CURSOR-HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 152)
  (CURSOR-ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 184)
  (BORDER :FLOAT :OFFSET 216)
  (ROUNDING :FLOAT :OFFSET 220)
  (BAR-HEIGHT :FLOAT :OFFSET 224)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 228)
  (SPACING (:STRUCT NK-VEC2) :OFFSET 236)
  (CURSOR-SIZE (:STRUCT NK-VEC2) :OFFSET 244)
  (SHOW-BUTTONS :INT :OFFSET 252)
  (INC-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 256)
  (DEC-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 432)
  (INC-SYMBOL NK-SYMBOL-TYPE :OFFSET 608)
  (DEC-SYMBOL NK-SYMBOL-TYPE :OFFSET 612)
  (USERDATA NK-HANDLE :OFFSET 616)
  (DRAW-BEGIN FUNCTION-POINTER :OFFSET 624)
  (DRAW-END FUNCTION-POINTER :OFFSET 632))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2052:8"
(CFFI:DEFCSTRUCT (NK-STYLE-PROGRESS :SIZE 256)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (CURSOR-NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 104)
  (CURSOR-HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 136)
  (CURSOR-ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 168)
  (CURSOR-BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 200)
  (ROUNDING :FLOAT :OFFSET 204)
  (BORDER :FLOAT :OFFSET 208)
  (CURSOR-BORDER :FLOAT :OFFSET 212)
  (CURSOR-ROUNDING :FLOAT :OFFSET 216)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 220)
  (USERDATA NK-HANDLE :OFFSET 232)
  (DRAW-BEGIN FUNCTION-POINTER :OFFSET 240)
  (DRAW-END FUNCTION-POINTER :OFFSET 248))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2078:8"
(CFFI:DEFCSTRUCT (NK-STYLE-SCROLLBAR :SIZE 616)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (CURSOR-NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 104)
  (CURSOR-HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 136)
  (CURSOR-ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 168)
  (CURSOR-BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 200)
  (BORDER :FLOAT :OFFSET 204)
  (ROUNDING :FLOAT :OFFSET 208)
  (BORDER-CURSOR :FLOAT :OFFSET 212)
  (ROUNDING-CURSOR :FLOAT :OFFSET 216)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 220)
  (SHOW-BUTTONS :INT :OFFSET 228)
  (INC-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 232)
  (DEC-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 408)
  (INC-SYMBOL NK-SYMBOL-TYPE :OFFSET 584)
  (DEC-SYMBOL NK-SYMBOL-TYPE :OFFSET 588)
  (USERDATA NK-HANDLE :OFFSET 592)
  (DRAW-BEGIN FUNCTION-POINTER :OFFSET 600)
  (DRAW-END FUNCTION-POINTER :OFFSET 608))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2111:8"
(CFFI:DEFCSTRUCT (NK-STYLE-EDIT :SIZE 800)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (SCROLLBAR (:STRUCT NK-STYLE-SCROLLBAR) :OFFSET 104)
  (CURSOR-NORMAL (:STRUCT NK-COLOR) :OFFSET 720)
  (CURSOR-HOVER (:STRUCT NK-COLOR) :OFFSET 724)
  (CURSOR-TEXT-NORMAL (:STRUCT NK-COLOR) :OFFSET 728)
  (CURSOR-TEXT-HOVER (:STRUCT NK-COLOR) :OFFSET 732)
  (TEXT-NORMAL (:STRUCT NK-COLOR) :OFFSET 736)
  (TEXT-HOVER (:STRUCT NK-COLOR) :OFFSET 740)
  (TEXT-ACTIVE (:STRUCT NK-COLOR) :OFFSET 744)
  (SELECTED-NORMAL (:STRUCT NK-COLOR) :OFFSET 748)
  (SELECTED-HOVER (:STRUCT NK-COLOR) :OFFSET 752)
  (SELECTED-TEXT-NORMAL (:STRUCT NK-COLOR) :OFFSET 756)
  (SELECTED-TEXT-HOVER (:STRUCT NK-COLOR) :OFFSET 760)
  (BORDER :FLOAT :OFFSET 764)
  (ROUNDING :FLOAT :OFFSET 768)
  (CURSOR-SIZE :FLOAT :OFFSET 772)
  (SCROLLBAR-SIZE (:STRUCT NK-VEC2) :OFFSET 776)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 784)
  (ROW-PADDING :FLOAT :OFFSET 792))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2145:8"
(CFFI:DEFCSTRUCT (NK-STYLE-PROPERTY :SIZE 1312)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (LABEL-NORMAL (:STRUCT NK-COLOR) :OFFSET 100)
  (LABEL-HOVER (:STRUCT NK-COLOR) :OFFSET 104)
  (LABEL-ACTIVE (:STRUCT NK-COLOR) :OFFSET 108)
  (SYM-LEFT NK-SYMBOL-TYPE :OFFSET 112)
  (SYM-RIGHT NK-SYMBOL-TYPE :OFFSET 116)
  (BORDER :FLOAT :OFFSET 120)
  (ROUNDING :FLOAT :OFFSET 124)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 128)
  (EDIT (:STRUCT NK-STYLE-EDIT) :OFFSET 136)
  (INC-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 936)
  (DEC-BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 1112)
  (USERDATA NK-HANDLE :OFFSET 1288)
  (DRAW-BEGIN FUNCTION-POINTER :OFFSET 1296)
  (DRAW-END FUNCTION-POINTER :OFFSET 1304))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2176:8"
(CFFI:DEFCSTRUCT (NK-STYLE-CHART :SIZE 64)
  (BACKGROUND (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 32)
  (SELECTED-COLOR (:STRUCT NK-COLOR) :OFFSET 36)
  (COLOR (:STRUCT NK-COLOR) :OFFSET 40)
  (BORDER :FLOAT :OFFSET 44)
  (ROUNDING :FLOAT :OFFSET 48)
  (PADDING (:STRUCT NK-VEC2) :OFFSET 52))


;; "/home/baggers/quicklisp/local-projects/raw-bindings-nuklear/spec/nuklear.h:2189:8"
(CFFI:DEFCSTRUCT (NK-STYLE-COMBO :SIZE 352)
  (NORMAL (:STRUCT NK-STYLE-ITEM) :OFFSET 0)
  (HOVER (:STRUCT NK-STYLE-ITEM) :OFFSET 32)
  (ACTIVE (:STRUCT NK-STYLE-ITEM) :OFFSET 64)
  (BORDER-COLOR (:STRUCT NK-COLOR) :OFFSET 96)
  (LABEL-NORMAL (:STRUCT NK-COLOR) :OFFSET 100)
  (LABEL-HOVER (:STRUCT NK-COLOR) :OFFSET 104)
  (LABEL-ACTIVE (:STRUCT NK-COLOR) :OFFSET 108)
  (SYMBOL-NORMAL (:STRUCT NK-COLOR) :OFFSET 112)
  (SYMBOL-HOVER (:STRUCT NK-COLOR) :OFFSET 116)
  (SYMBOL-ACTIVE (:STRUCT NK-COLOR) :OFFSET 120)
  (BUTTON (:STRUCT NK-STYLE-BUTTON) :OFFSET 128)
  (SYM-NORMAL NK-SYMBOL-TYPE :OFFSET 304)
  (SYM-HOVER NK-SYMBOL-TYPE :OFFSET 308)
  (SYM-ACTIVE NK-SYMBOL-TYPE :OFFSET 312)
  (BORDER :FLOAT :OFFSET 316)
  (ROUNDING :FLOAT :OFFSET 320)
  (CONTENT-PADDING (:STRUCT NK-VEC2) :OFFSET 324)
  (BUTTON-PADDING (:STRUCT NK-VEC2) :OFFSET 332)
  (SPACING (:STRUCT NK-VEC2) :OFFSET 340))

